# spacegame

./: .clang-format  Animation.cpp  Animation.hpp  Atlas.cpp  Atlas.hpp  CMakeLists.txt  Console.cpp  Console.hpp  FontCache.cpp  FontCache.hpp  FontDescriptor.hpp  GameState.cpp  GameState.hpp  Readme.org  RenderObject.hpp  SDL.cpp  SDL.hpp  Starfield.cpp  Starfield.hpp  TextureCache.hpp  TexturePath.hpp  atlas.cpp  atlas.hpp  compile_commands.json  constants.hpp  default.nix  font_cache.cpp  font_cache.hpp  game_state.cpp  game_state.hpp  licenses  lru.hpp  main.cpp  math.hpp  render_object.hpp  sdl.cpp  sdl.hpp  sound_cache.hpp  starfield.cpp  starfield.hpp  (+4 more)
cmake/: FindSDL2_ttf.cmake
